--- a/about/index.html
+++ b/about/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f9f9f9" />
-    <title>烟火075个人网址导航</title>
+    <title>网址导航</title>
     <link rel="shortcut icon" href="https://site.zycloud.tk/assets/images/bi-favicon.png" />
-    <meta name="keywords" content="烟火075个人网址导航" />
+    <meta name="keywords" content="网址导航" />
     
     <meta name="baidu-site-verification" content="codeva-cCAOSG8MBO" />
     
@@ -66,11 +66,11 @@
             <div class="navbar navbar-expand-md">
                 <div class="container-fluid p-0">
 
-                    <a href="" class="navbar-brand d-md-none" title="烟火075个人网址导航">
+                    <a href="" class="navbar-brand d-md-none" title="网址导航">
                         <img src="https://site.zycloud.tk/assets/images/bi.png" class="logo-light"
-                            alt="烟火075个人网址导航">
+                            alt="网址导航">
                         <img src="https://site.zycloud.tk/assets/images/bi.png" class="logo-dark d-none"
-                            alt="烟火075个人网址导航">
+                            alt="网址导航">
                     </a>
 
                     <div class="collapse navbar-collapse order-2 order-md-1">
