commit update at 2025-05-30 10:46

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                     
                                     <li class="sidebar-item">
                                         <a href="#7c3389b32f8860204191e0d210c98603" class="smooth">
-                                            <i class="far fa-solar-system fa-lg icon-fw icon-lg mr-2"></i>
+                                            <i class="fas fa-solar-system fa-lg icon-fw icon-lg mr-2"></i>
                                             <span>系统官网</span>
                                         </a>
                                     </li>
